Add new changes

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(libs order_book.cpp)
+add_library(libs level.cpp order_book.cpp order.cpp)
 target_link_libraries(libs PRIVATE absl::flat_hash_map)
 target_include_directories(libs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
